# plurality-utilities

./: .gitignore  GenerateNameShorthandAutoHotkeyScript.bat  LICENSE  LICENSE.md  README.md  makeAhkScript.bat  script.py  spike.bat  versions.json
0.10.0/: 404.html  index.html  sitemap.xml
0.10.0/about/: changelog.html
0.10.0/search/: search_index.js  search_index.json
0.10.1/: 404.html  index.html  sitemap.xml
0.10.1/about/: changelog.html
0.10.1/search/: search_index.js  search_index.json
0.10.2/: 404.html  index.html  sitemap.xml
0.10.2/about/: changelog.html
0.10.2/search/: search_index.js  (+1 more)
0.11-test_0/: 404.html  index.html
0.11-test_1/: 404.html  index.html
0.11.0/: 404.html  index.html  sitemap.xml
0.11.1/: 404.html  index.html  sitemap.xml
0.12.0/: 404.html  index.html  sitemap.xml
0.12.1/: 404.html  index.html  sitemap.xml
0.5.0/: 404.html  index.html  sitemap.xml
0.6.1/: 404.html  index.html  sitemap.xml
0.7.0/: 404.html  index.html  sitemap.xml
0.8.0/: 404.html  index.html  sitemap.xml
0.9.0/: 404.html  index.html  sitemap.xml
0.9.1/: 404.html  index.html  sitemap.xml
PluralityUtilities/: .runsettings  Directory.Build.props  Directory.Build.targets  PluralityUtilities.sln
branding/: logo.kra
documentation/: Dockerfile  docker-compose.yaml  mkdocs.yml  requirements.txt
documentation/petrichor-script-lexer/: pyproject.toml  setup.py
documentation/petrichor-script-lexer/petrichorscriptlexer/: petrichorscriptlexer.py
source/: .editorconfig  .runsettings  Directory.Build.props  Petrichor.sln  csharp.ruleset
(+541 files in other folders)
