[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petrichorscriptlexer"
description = "A custom RegexLexer for Petrichor Script"
version = "0.11.0"
authors = [
    { name = "SparkliTwizzl" }
]
dependencies = ["pygments"]

[project.entry-points."pygments.lexers"]
commandlexer = "petrichorscriptlexer.petrichorscriptlexer:PetrichorScriptLexer"
